fix css scrollbar issue

--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,15 @@
   scrollbar-width: none;     /* Firefox */
 }
 
+
+
+
+/* Hide scrollbar but keep scroll */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none;  /* IE & Edge */
+  scrollbar-width: none;     /* Firefox */
+}
